--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <p id="text">- YOUR COMPUTER HAS VIRUS -</p>
-    <script src="index.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="index.css" />
+  <title>Document</title>
+</head>
+
+<body>
+  <iframe style="width: 100vw; height: 100vh" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS4YHzFg7jOBsp50uv3S17nN6wnYMWlA6KtPSj7yLSPV-evffld3OJBwLXREhmDmw/pubhtml?gid=1036854972&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
+</body>
+
 </html>
